--- a/TimeOryx/TimeOryx.csproj
+++ b/TimeOryx/TimeOryx.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="19.1.0.59" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.1.0.59" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
