--- a/TimeOryx/TimeOryx.csproj
+++ b/TimeOryx/TimeOryx.csproj
@@ -22,6 +22,12 @@
     <Compile Update="Achivment_master.xaml.cs">
       <DependentUpon>Achivment_master.xaml</DependentUpon>
     </Compile>
+    <Compile Update="pages\Achievements.xaml.cs">
+      <DependentUpon>Achievements.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="pages\AddAchievementsPage.xaml.cs">
+      <DependentUpon>AddAchievementsPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +48,9 @@
     </EmbeddedResource>
     <EmbeddedResource Update="pages\AddQuestPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="pages\Achievements.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="pages\Options.xaml">
       <Generator>MSBuild:Compile</Generator>
