--- a/TimeOryx/TimeOryx.csproj
+++ b/TimeOryx/TimeOryx.csproj
@@ -64,6 +64,9 @@
     <EmbeddedResource Update="pages\SelectDone.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="pages\SelectDoneQuest.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="pages\StatPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
